Fixed page input

--- a/demo/index.html
+++ b/demo/index.html
@@ -52,7 +52,7 @@
       });
 
       document.querySelector('#getPage').addEventListener('click', e => {
-        document.querySelector('#images').name =
+        document.querySelector('#images').page =
           document.querySelector('#page').value;
       });
     </script>
