fixed image issue

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <body>
     <header>
-      <img src='../images/nasa.png' alt="nasa-logo">
+      <img src='images/nasa.png' alt="nasa-logo">
     </header>
     <div id="fields">
       <label for="load">Search Images</label>
