lit path issues

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <body>
     <header>
-      <img src='images/nasa.png' alt="nasa-logo">
+      <img src='/images/nasa.png' alt="nasa-logo">
     </header>
     <div id="fields">
       <label for="load">Search Images</label>
@@ -113,7 +113,7 @@
 
     <nasa-image-search id="images"></nasa-image-search>
     <script type="module">
-      import 'src/NasaImageSearch.js';
+      import '/src/NasaImageSearch.js';
       const checkbox = document.getElementById('dataOnly');
       checkbox.addEventListener('change', (e) => {
       e.currentTarget.checked ? document.querySelector("#images").listOnly = true : document.querySelector("#images").listOnly = false;
