Added config files and dependencies

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   <body>
     <header>
       <img src="./images/nasa.png" alt="nasa-logo">
+      <h1>Nasa Image Search</h1>
     </header>
     <div id="fields">
       <label for="load">Search Images</label>
