--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <body>
     <header>
-      <img src="./assets/nasa.png" alt="nasa-logo">
+      <!-- <img src="./assets/nasa.png" alt="nasa-logo"> -->
       <h1>Nasa Image Search</h1>
     </header>
     <div id="fields">
