testing alternate ways

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
 
     <nasa-image-search id="images"></nasa-image-search>
-    <script type="module" src="./src/Nasa.js">
+    <script type="module" src="/src/Nasa.js">
     //   import "./src/NasaImageSearch.js";
     //   const checkbox = document.getElementById('dataOnly');
     //   checkbox.addEventListener('change', (e) => {
