--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
     </div>
 
     <nasa-image-search id="images"></nasa-image-search>
-    <script type="module" src="/src/Nasa.js">
-    //   import "./src/NasaImageSearch.js";
-    //   const checkbox = document.getElementById('dataOnly');
-    //   checkbox.addEventListener('change', (e) => {
-    //   e.currentTarget.checked ? document.querySelector("#images").listOnly = true : document.querySelector("#images").listOnly = false;
-    // })
+    <script type="module">
+      import "./src/NasaImageSearch.js";
+      const checkbox = document.getElementById('dataOnly');
+      checkbox.addEventListener('change', (e) => {
+      e.currentTarget.checked ? document.querySelector("#images").listOnly = true : document.querySelector("#images").listOnly = false;
+    })
 
-    //   document.querySelector('#getData').addEventListener('click', e => {
-    //     document.querySelector('#images').name = document.querySelector('#load').value;
-    //     document.querySelector('#images').page = document.querySelector('#page').value;
-    //     document.querySelector('#images').year_start = document.querySelector('#start').value; 
-    //     document.querySelector('#images').year_end = document.querySelector('#end').value;
-    //   });
+      document.querySelector('#getData').addEventListener('click', e => {
+        document.querySelector('#images').name = document.querySelector('#load').value;
+        document.querySelector('#images').page = document.querySelector('#page').value;
+        document.querySelector('#images').year_start = document.querySelector('#start').value; 
+        document.querySelector('#images').year_end = document.querySelector('#end').value;
+      });
     </script>
   </body>
 </html>
