--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <meta name="Description" content="Put your description here." />
-    <base href="/" />
+    <!-- <base href="/" /> -->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
       html,
@@ -86,7 +86,7 @@
 
   <body>
     <header>
-      <!-- <img src="./assets/nasa.png" alt="nasa-logo"> -->
+      <img src="./assets/nasa.png" alt="nasa-logo">
       <h1>Nasa Image Search</h1>
     </header>
     <div id="fields">
