--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <nasa-image-search id="images"></nasa-image-search>
     <script type="module">
-      import "../src/NasaImageSearch.js";
+      import "./src/NasaImageSearch.js";
 
       const checkbox = document.getElementById('dataOnly');
       checkbox.addEventListener('change', (e) => {
