--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         font-weight: 700;
       }
     </style>
-    <title>NasaImageSearch</title>
+    <title>Nasa Image Search</title>
   </head>
 
   <body>
@@ -114,7 +114,7 @@
 
     <nasa-image-search id="images"></nasa-image-search>
     <script type="module">
-      import './src/NasaImageSearch.js';
+      import "./nasa-image-search.js";
 
       const checkbox = document.getElementById('dataOnly');
       checkbox.addEventListener('change', (e) => {
