--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        width: 200px;
+        width: 250px;
       }
 
 
@@ -47,13 +47,15 @@
 
       img {
         width: 200px;
+        height: 55px;
+        margin-top: 20px;
         margin-bottom: 20px;
       }
 
       input {
         border: 2px solid black;
         border-radius: 10px;
-        padding: 12px;
+        padding: 15px;
       }
 
       label {
@@ -63,12 +65,13 @@
       @media (max-width: 600px) {
         img {
           width: 100px;
+          height: 30px;
         }
         h1 {
           font-size: 18px;
         }
         .fields {
-          width: 175px;
+          width: 200px;
         }
         label {
           font-size: 14px;
