--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         width: 250px;
       }
 
-
       #getData {
         margin-top: 20px;
         margin-bottom: 20px;
@@ -42,7 +41,8 @@
       }
 
       .flex-2 {
-        margin-top: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
       }
 
       img {
@@ -83,38 +83,43 @@
 
   <body>
     <header>
-      <img  src="./assets/nasa.png" alt="nasa-logo">
+      <img src="./assets/nasa.png" alt="nasa-logo" />
       <h1>Nasa Image Search</h1>
     </header>
     <div class="fields">
       <label for="load" class="one">Search Images</label>
-      <input id="load" type="text" placeholder="Search Images"  autofocus required>
+      <input id="load" type="text" placeholder="Search Images" autofocus />
       <label for="page">Page Number</label>
-      <input id="page" type="text" placeholder="Page Number" required>
+      <input id="page" type="text" placeholder="Page Number" />
       <label for="start">Start Year</label>
-      <input id="start" type="text" placeholder="Start Year" required>
+      <input id="start" type="text" placeholder="Start Year" />
       <label for="end">End Year</label>
-      <input id="end" type="text" placeholder="End Year" required>
+      <input id="end" type="text" placeholder="End Year" />
+      <button id="getData" type="submit">Search</button>
     </div>
     <div class="flex-2">
       <label for="dataOnly" class="label">Data only:</label>
-      <input id="dataOnly" type="checkbox"required>
+      <input id="dataOnly" type="checkbox" />
     </div>
-    <button id="getData">Search</button>
     <nasa-image-search id="images"></nasa-image-search>
     <script type="module">
       import './src/NasaImageSearch.js';
 
-      const checkbox = document.getElementById('dataOnly');
-      checkbox.addEventListener('change', (e) => {
-      e.currentTarget.checked ? document.querySelector("#images").listOnly = true : document.querySelector("#images").listOnly = false;
-    })
+      document.getElementById('dataOnly').addEventListener('change', e => {
+        e.currentTarget.checked
+          ? (document.querySelector('#images').listOnly = true)
+          : (document.querySelector('#images').listOnly = false);
+      });
 
       document.querySelector('#getData').addEventListener('click', e => {
-        document.querySelector('#images').name = document.querySelector('#load').value;
-        document.querySelector('#images').page = document.querySelector('#page').value;
-        document.querySelector('#images').year_start = document.querySelector('#start').value; 
-        document.querySelector('#images').year_end = document.querySelector('#end').value;
+        document.querySelector('#images').name =
+          document.querySelector('#load').value;
+        document.querySelector('#images').page =
+          document.querySelector('#page').value;
+        document.querySelector('#images').year_start =
+          document.querySelector('#start').value;
+        document.querySelector('#images').year_end =
+          document.querySelector('#end').value;
       });
     </script>
   </body>
